<resources>
    <string name="app_name">Kaiman Ventas que Valen</string>
    <string name="boton_crearRegistro">CREAR REGISTRO</string>
    <string name="titulo_app">Kaiman Ventas que Valen</string>
    <string name="solicitud_de_identificación">Ingrese su correo o rut</string>
    <string name="solicitud_de_contraseña">Ingrese su contraseña</string>
    <string name="boton_invitadx">Ingresa como invitado/a</string>
    <string name="boton_inicioSesion">INICIAR SESIÓN</string>
    <string name="titulo_crearRegistro">SELECCIONA EL PERFIL DE USUARIO A CREAR</string>
    <string name="nuevo_cliente">NUEVO CLIENTE</string>
    <string name="nuevo_vendedor">NUEVO VENDEDOR</string>
    <string name="titulo_formulario">FORMULARIO NUEVO CLIENTE</string>
    <string name="boton_guardar_datos">GUARDAR</string>
    <string name="visualizarStock">Visualizar Stock</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_misPedidos">Mis Pedidos</string>
    <string name="menu_visualizarStock">Visualizar Stocks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="textoRealizarPedido">Realizar Pedido</string>
    <string name="SolicitudNumero">Ingresa tu número</string>
    <string name="TextoGuiaNúmero">Teléfono fijo: código de área + número. Celular: 9 + número</string>
    <string name="SeleccionDireccion">Seleciona tu dirección</string>
    <string name="BotonAñadir">Añadir</string>

</resources>