<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

        <variable
            name="viewmodel"
            type="cl.valentina.miapp.viewModel.UsuarioViewModel" />


    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tituloAppTextView"
            android:layout_width="107dp"
            android:layout_height="50dp"
            android:layout_marginEnd="164dp"
            android:text="@string/titulo_app"
            app:layout_constraintBottom_toTopOf="@+id/tvCorreoViewModel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="78dp"
            android:layout_height="49dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.017"
            app:srcCompat="@mipmap/verde" />

        <EditText
            android:id="@+id/tvCorreoViewModel"
            android:text="@{viewmodel.correoelectronico}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/solicitud_de_identificación"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/tvClaveViewModel"
            android:text="@{viewmodel.clave}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/solicitud_de_contraseña"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCorreoViewModel"
            app:layout_constraintVertical_bias="0.705"/>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvClaveViewModel"
            app:layout_constraintHorizontal_bias="0.74"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.068"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvClaveViewModel"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.068"
            app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

        <Button
            android:id="@+id/boton_inicioSesion"
            android:onClick="@{viewmodel::iniciarSesion}"
            android:layout_width="246dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:text="@string/boton_inicioSesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClaveViewModel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>