<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71CD6E"
    tools:context=".view.fragment.one">

    <!-- TODO: Update blank fragment layout

    <TextView
        android:id="@+id/fragmentTextView"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginTop="328dp"
        android:background="#E3DADA"
        android:padding="20dp"
        android:text="Realiza tu pedido aquí"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="204dp"
        android:layout_height="53dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="96dp"
        android:background="@android:color/white"
        android:hint="Ingresa tu número"
        android:padding="2dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTextView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:background="#FBF1F1"
        android:src="@drawable/ic_baseline_phone_android_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" /> -->


    <Button
        android:id="@+id/botonRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0A5951"
        android:text="@string/textoRealizarPedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SolicitudNumero"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/botonRP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoRealizarPedido"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="274dp"
        android:layout_height="41dp"
        android:layout_marginBottom="112dp"
        android:text="@string/TextoGuiaNúmero"
        android:textColor="#212121"
        app:layout_constraintBottom_toTopOf="@+id/botonRP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
</androidx.constraintlayout.widget.ConstraintLayout>